--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -14,6 +14,8 @@ links:
     - https://github.com/canonical/transition-tracker-operator/issues
   source:
     - https://github.com/canonical/transition-tracker-operator
+  documentation:
+    - https://discourse.charmhub.io/t/ubuntu-transition-tracker-documentation/19690
 
 
 base: ubuntu@24.04
