Remove legacy requirements files and use uv instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,20 @@ requires-python = ">=3.10"
 
 dependencies = ["charmlibs-apt~=1.0", "ops", "pydantic"]
 
-[project.optional-dependencies]
-dev = [
+[dependency-groups]
+lint = [
+    "ruff",
+]
+static = [
+    "pyright",
+    "ops",
+]
+test = [
+    "pytest",
     "ops[testing]",
     "coverage[toml]",
-    "pyright",
-    "pytest",
     "requests",
     "jubilant",
-    "ruff",
 ]
 
 # Testing tools configuration
